# Development-BC

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
configs/: ct16ev.yaml  ct17ev.yaml
dashboard/: __main__.py  app.py
dashboard/data/: sim_runner.py  telemetry_loader.py
dashboard/pages/: cars.py  lap_detail.py  overview.py  pareto.py  strategy.py  sweep.py  sweeps.py  validation.py
docker/: Dockerfile  docker-compose.yaml
docs/obsidian-vault/: Home.md
docs/obsidian-vault/.obsidian/: workspace.json
docs/obsidian-vault/Modules/: Dashboard.md
docs/obsidian-vault/Physics/: Simulator Validation Comparison.md
docs/superpowers/plans/: 2026-04-14-physics-validation-upgrade.md
docs/superpowers/specs/: 2026-04-13-tier3-simulation-upgrade-design.md  2026-04-14-3d-vehicle-visualization-idea.md  2026-04-14-calibrated-driver-model-design.md  2026-04-14-cornering-drag-findings.md  2026-04-14-dashboard-implementation-design.md  2026-04-14-dashboard-redesign.md  2026-04-14-physics-validation-upgrade-design.md
scripts/: analyze_gps_laps.py  clean_endurance_data.py  fix_gps_data.py
src/fsae_sim/analysis/: telemetry_analysis.py
src/fsae_sim/data/: __init__.py  loader.py
src/fsae_sim/driver/: strategies.py
src/fsae_sim/sim/: __init__.py  engine.py  speed_envelope.py
src/fsae_sim/track/: track.py
src/fsae_sim/vehicle/: __init__.py  (+7 more)
tests/: conftest.py  test_cornering_solver.py  test_dynamics.py  test_engine_envelope.py  test_load_transfer.py  test_loader.py  test_speed_envelope.py  test_tire_model.py  test_vehicle.py
